Docker compose per arrancar tot